--- a/phoneApp/app/global.css
+++ b/phoneApp/app/global.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Fustat:wght@200..800&display=swap');
+.primaryFont{
+    font-family: "Fustat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
